# crypto-framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: doxygen.yml
apps/backend-demo/: CMakeLists.txt  backend-demo.cpp
apps/demo/: CMakeLists.txt  demo.cpp
backend/: CMakeLists.txt  cryptofw-backend.cpp
backend/include/: cryptofw-backend.h
cmake/: FindCryptoPro.cmake
csharp/: CMakeLists.txt
csharp/test/: run_test.bat  test.cs
docs/: CMakeLists.txt
include/cryptofw/: Blob.hpp  CadesType.hpp  CryptoFramework.hpp  CryptoProCertificate.hpp  CryptoProCsp.hpp  CspType.hpp  ICertificate.hpp  ICsp.hpp  TestClass.hpp  Utils.hpp  VipNetCertificate.hpp  VipNetCsp.hpp  XadesType.hpp  utils.hpp
java/: CMakeLists.txt  cryptofw.i  run_test.bat  test.java
langs/: cryptofw.i
langs/csharp/: CMakeLists.txt
langs/csharp/test/: run_test.bat  test.cs  test.csproj
langs/java/: CMakeLists.txt  test.java
langs/python/: CMakeLists.txt  test.py
python/: CMakeLists.txt  build.bat  cryptofw.i  setup.py  test.py
src/: CMakeLists.txt  CryptoFramework.cpp  CryptoProCertificate.cpp  CryptoProCsp.cpp  MscapiCertificate.cpp  MscapiCsp.cpp  TestClass.cpp  Utils.cpp  VipNetCertificate.cpp  VipNetCsp.cpp  private_utils.cpp  utils.cpp
src/include/: CryptoProCertificate.hpp  CryptoProCsp.hpp  MscapiCertificate.hpp  MscapiCsp.hpp  VipNetCertificate.hpp  VipNetCsp.hpp  private_utils.hpp
