include_directories(${JNI_INCLUDE_DIRS})

set(SWIG_INPUT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../cryptofw.i")
set(SWIG_MODULE_NAME "java_cryptofw")

set(SWIG_GENERATED_DIR "${CMAKE_CURRENT_SOURCE_DIR}/swig_generated")
file(MAKE_DIRECTORY ${SWIG_GENERATED_DIR})

set_source_files_properties(${SWIG_INPUT_FILE} PROPERTIES CPLUSPLUS ON)
set(CMAKE_SWIG_OUTDIR ${SWIG_GENERATED_DIR})

swig_add_library(${SWIG_MODULE_NAME}
    TYPE MODULE
    LANGUAGE java
    SOURCES ${SWIG_INPUT_FILE}
)

set_target_properties(${SWIG_MODULE_NAME} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${SWIG_GENERATED_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${SWIG_GENERATED_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${SWIG_GENERATED_DIR}
    SWIG_GENERATED_FILE_DIR ${SWIG_GENERATED_DIR}
)

target_link_libraries(${SWIG_MODULE_NAME} PRIVATE cryptofw ${Python_LIBRARIES})

target_include_directories(${SWIG_MODULE_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}
)